2014-11-07  John Dennis  <jdennis@redhat.com> 0.17.0
  The primary enhancement in this version is adding support for PBKDF2

  * The following module functions were added:

    - nss.create_pbev2_algorithm_id

  * The following class methods were added:

    - nss.AlgorithmID.get_pbe_crypto_mechanism

    - nss.PK11Slot.pbe_key_gen
    - nss.PK11Slot.format_lines
    - nss.PK11Slot.format

    - nss.Pk11SymKey.format_lines
    - nss.Pk11SymKey.format

  * The following files were added:

    - doc/examples/pbkdf2_example.py

2014-10-21  John Dennis  <jdennis@redhat.com> 0.16.0
  The primary enhancements in this version is adding support for the
  setting trust attributes on a Certificate, the SSL version range API,
  information on the SSL cipher suites and information on the SSL connection.

  * The following module functions were added:

    - ssl.get_ssl_version_from_major_minor
    - ssl.get_default_ssl_version_range
    - ssl.get_supported_ssl_version_range
    - ssl.set_default_ssl_version_range
    - ssl.ssl_library_version_from_name
    - ssl.ssl_library_version_name
    - ssl.get_cipher_suite_info
    - ssl.ssl_cipher_suite_name
    - ssl.ssl_cipher_suite_from_name

  * The following deprecated module functions were removed:

    - ssl.nssinit
    - ssl.nss_ini
    - ssl.nss_shutdown

  * The following classes were added:

    - SSLCipherSuiteInfo
    - SSLChannelInfo

  * The following class methods were added:

    - Certificate.trust_flags
    - Certificate.set_trust_attributes

    - SSLSocket.set_ssl_version_range
    - SSLSocket.get_ssl_version_range
    - SSLSocket.get_ssl_channel_info
    - SSLSocket.get_negotiated_host
    - SSLSocket.connection_info_format_lines
    - SSLSocket.connection_info_format
    - SSLSocket.connection_info_str
	
    - SSLCipherSuiteInfo.format_lines
    - SSLCipherSuiteInfo.format

    - SSLChannelInfo.format_lines
    - SSLChannelInfo.format

  * The following class properties were added:
